# markets

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  bibliography.bib  configure.ac  cran-comments.md
.github/workflows/: check-standard.yaml  pkgdown.yaml  test-coverage.yaml
R/: data.R  diseq_basic.R  diseq_deterministic_adjustment.R  diseq_directional.R  diseq_stochastic_adjustment.R  disequilibrium_model.R  equation_base.R  equation_basic.R  equation_deterministic_adjustment.R  equation_directional.R  equation_stochastic_adjustment.R  equilibrium_model.R  hessian_basic.R  hessian_directional.R  market_fit.R  market_model.R  markets.R  model_logger.R  model_simulation.R  system_base.R  system_basic.R  system_deterministic_adjustment.R  system_directional.R  system_equilibrium.R  system_stochastic_adjustment.R
data/: houses.rda
inst/: CITATION  WORDLIST
man/: coef.Rd  equation_classes.Rd  estimate.Rd  formula-market_model-method.Rd  houses.Rd  logLik.Rd  marginal_effects.Rd  market_aggregation.Rd  market_descriptives.Rd  market_fit-class.Rd  market_models.Rd  market_quantities.Rd  market_simulation.Rd  markets.Rd  model_description.Rd  model_initialization.Rd  model_likelihoods.Rd  model_logger-class.Rd  ncoef.Rd  nobs.Rd  plot.Rd  shortage_analysis.Rd  show.Rd  single_call_estimation.Rd  summary.Rd  system_classes.Rd  variable_names.Rd  vcov.Rd
pkgdown/: extra.css
rsc/: build.org  design.drawio  implementation.drawio  logo.xcf
src/: Makevars.in  Makevars.win  RcppExports.cpp  equilibrium.cpp
tests/: testthat.R
tests/testthat/: helper-common.R  test-basic.R  test-deterministic_adjustment.R  test-directional.R  test-equilibrium.R  test-stochastic_adjustment.R
vignettes/: .install_extras  basic_usage.Rmd  market_clearing_assessment.Rmd  model_details.Rmd  package.Rmd
